force-app/main/default/objects/SPEN_Case_Tracker__c/SPEN_Case_Tracker__c.object-meta.xml
<CustomObject>
    <label>Case Tracker</label>
    <nameField>
        <displayFormat>CT-{0000}</displayFormat>
        <label>Case Tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Trackers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>