force-app/main/default/objects/SPEN_Case_Tracker__c/fields/Case_Tracker_Type__c.field-meta.xml
<CustomField>
    <fullName>Case_Tracker_Type__c</fullName>
    <label>Case Tracker Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Case Owner Update</fullName>
                <default>true</default>
                <label>Case Owner Update</label>
            </value>
            <value>
                <fullName>Case Status Update</fullName>
            </value>
            <value>
                <fullName>Case SLA Update</fullName>
            </value>
            <value>
                <fullName>Case Routing Outcome Update</fullName>
            </value>
            <value>
                <fullName>3PD Accepted &gt; Closed</fullName>
            </value>
            <value>
                <fullName>Partner Account Update</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>