force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_AgentHandlingTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AgentHandlingTime__c</fullName>
    <inlineHelpText>Days : Hours : Minutes : Seconds</inlineHelpText>
    <label>Agent Handling Time</label>
    <length>50</length>
    <type>Text</type>
</CustomField>