force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_AgentHandlingTimeInMinutes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_AgentHandlingTimeInMinutes__c</fullName>
    <label>Agent Handling Time (In Minutes)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>