force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_CaseOwner__c.field-meta.xml
<CustomField>
    <fullName>SPEN_CaseOwner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Who has made this change</inlineHelpText>
    <label>Updated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Trackers</relationshipName>
    <type>Lookup</type>
</CustomField>