force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_EndTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_EndTime__c</fullName>
    <label>End Time</label>
    <type>DateTime</type>
</CustomField>