force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_OwnerAssignmentType__c.field-meta.xml
<CustomField>
    <fullName>SPEN_OwnerAssignmentType__c</fullName>
    <description>Field to differentiate if the case owner assignment is via manual operation or automated process.</description>
    <label>Owner Assignment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>Automated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>