force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_ParentCase__c.field-meta.xml
<CustomField>
    <fullName>SPEN_ParentCase__c</fullName>
    <label>Parent Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Trackers</relationshipLabel>
    <relationshipName>Case_Trackers</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>