force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_PartnerAssignmentTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PartnerAssignmentTime__c</fullName>
    <description>CRMD-10627</description>
    <label>Partner Assignment Time</label>
    <type>DateTime</type>
</CustomField>