force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_PartnerHandlingTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PartnerHandlingTime__c</fullName>
    <description>CRMD-10627</description>
    <inlineHelpText>Days : Hours : Minutes : Seconds</inlineHelpText>
    <label>Partner Handling Time</label>
    <length>30</length>
    <type>Text</type>
</CustomField>