force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_PartnerHandlingTimeInMinutes__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PartnerHandlingTimeInMinutes__c</fullName>
    <description>CRMD-10627</description>
    <label>Partner Handling Time In Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>