force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_PreviousValue__c.field-meta.xml
<CustomField>
    <fullName>SPEN_PreviousValue__c</fullName>
    <label>Previous Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>