force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_Reassignment_Reason__c.field-meta.xml
<CustomField>
    <fullName>SPEN_Reassignment_Reason__c</fullName>
    <description>CRMD - 8398 If a case has been reassigned multiple times, history of the reassignments required.</description>
    <label>Reassignment Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Awaiting information</fullName>
            </value>
            <value>
                <fullName>Moving to Another Agent</fullName>
            </value>
            <value>
                <fullName>Moving to Another Queue</fullName>
            </value>
            <value>
                <fullName>Telephone Call</fullName>
            </value>
            <value>
                <fullName>Unable to Complete (Insufficient Time Remaining on Shift)</fullName>
            </value>
            <value>
                <fullName>Automation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>