force-app/main/default/objects/SPEN_Case_Tracker__c/fields/SPEN_StartTime__c.field-meta.xml
<CustomField>
    <fullName>SPEN_StartTime__c</fullName>
    <label>Start Time</label>
    <type>DateTime</type>
</CustomField>